# agent-control-plane-oss

./: .github\ISSUE_TEMPLATE\bug_report.yml  .github\PULL_REQUEST_TEMPLATE.md  .github\release.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  coordination\README.md  docs\architecture.md  docs\mockups\common.css  docs\mockups\desktop-chat.html  docs\mockups\mobile-chat.html  docs\releases\v0.1.0.md  examples\local-workers\profile-manager\_agent_profile\memory\memory_sources.md  examples\local-workers\profile-manager\_agent_profile\memory\session_memory_snapshot.md  examples\local-workers\profile-manager\_agent_profile\skills\skills_manifest.md  examples\local-workers\profile-manager\memory\session_memory.md  examples\projects\demo-project\_agent\_agent_profile\config\config_snapshot.toml  examples\projects\demo-project\_agent\_agent_profile\environment\environment_manifest.md  examples\projects\demo-project\_agent\_agent_profile\rules\rules_snapshot\README.md  examples\projects\demo-project\_agent\subagents\worker-a\_agent_profile\README.md  examples\projects\demo-project\_agent\subagents\worker-a\_agent_profile\config\config_snapshot.toml  examples\projects\demo-project\_agent\subagents\worker-a\_agent_profile\memory\memory_sources.md  examples\projects\demo-project\_agent\subagents\worker-a\_agent_profile\memory\session_memory_snapshot.md  examples\projects\demo-project\_agent\subagents\worker-a\_agent_profile\rules\rules_manifest.md  examples\projects\demo-project\_agent\subagents\worker-a\worker-profile.json  (+7 more)
(+29 files in other folders)
